# iroha-python

./: .gitignore  .pylintrc  Cargo.toml  Jenkinsfile  MAINTAINERS.md  Makefile  README.md  api.fbs  clahub  connection.py  crypto_build.sh  dev-requirements.txt  example_iroha_python.py  how_to_test  iroha.py  lints.toml  pyproject.toml  requirements.txt  setup.py  test.py  test_connection.py  test_iroha.py  test_query.py  tox.ini  transaction.py
.circleci/: config.yml
.github/workflows/: CI.yml  ci.yml  iroha1.yml  iroha2-pr.yml  iroha2.yml  pip-audit.yml  pr-pytests.yml  pr.yml  pythonpublish.yml  repolinter.yml  test-dispatch-trigger.yml
.jenkinsci/: cancel-builds-same-job.groovy  linux-build-wheels.groovy
docker/: Dockerfile_to_test_various_versions_of_library  docker-compose.yaml  docker-compose.yml
docker/grpcwebproxy/: Dockerfile
docker/iroha/: config.docker  entrypoint.sh  genesis.block
docker/iroha/keys/: btc_fee_rate@notary.priv  btc_fee_rate@notary.pub  btc_withdrawal_signature_collector@notary.priv  btc_withdrawal_signature_collector@notary.pub  registration_service@notary.priv  registration_service@notary.pub  sora@sora.priv  sora@sora.pub
docs/: Makefile  conf.py  index.rst  iroha.lib.ed25519.rst  iroha.primitive.rst  iroha.query.rst  iroha.rst  iroha.transaction.rst  make.bat
docs-recipes/: 2.1.1.key-pair.py  2.3.client.py  3.register-domain.py  4.register-account.py  5.register-and-mint.py
example/: Dockerfile  config.json  docker-compose.yml  example_iroha_python.py  sign.py  test.py
example/peer_config/: genesis.json
examples/: add-syncing-peer.py  batch-example.py  blocks-query.py  create.py  example.py  infinite-blocks-stream.py  mst-example.py  query-transactions.py  query_transactions.py  sign_email.py  sign_tx.py  tls-example.py  tx-example.py  tx-ordering.py
examples/utilities/: errorCodes2Hr.py
generate/: Cargo.toml
generate/src/: as_py.rs  main.rs  module.rs
html/: genindex.html  index.html  iroha.helper.html  iroha.html  iroha.lib.ed25519.html  iroha.lib.html  iroha.network.html  iroha.primitive.html  iroha.query.html  iroha.transaction.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/.doctrees/: environment.pickle  index.doctree  iroha.doctree  iroha.helper.doctree  iroha.lib.doctree  iroha.lib.ed25519.doctree  iroha.network.doctree  iroha.primitive.doctree  iroha.query.doctree  iroha.transaction.doctree
html/_modules/: index.html  iroha.html
html/_modules/iroha/: creator.html
html/_sources/: iroha.helper.rst.txt  iroha.lib.rst.txt  iroha.network.rst.txt
iroha/: __init__.py  block_pb2.py  block_pb2.py.bak  commands_pb2.py  commands_pb2.py.bak  creator.py  ed25519.py  ed25519_sha2.py  endpoint_pb2.py  endpoint_pb2.py.bak  endpoint_pb2_grpc.py  iroha.py  primitive_pb2.py  proposal_pb2.py  proposal_pb2.py.bak  qry_responses_pb2.py  qry_responses_pb2.py.bak  queries_pb2.py  queries_pb2.py.bak  transaction_pb2.py  transaction_pb2.py.bak
iroha/ed25519_sha3/: ed25519_sha3module.c
iroha/helper/: crypto.py  ed25519.py  exception.py  logger.py  random.py  stateless_validator.py
iroha/network/: connection.py
iroha/primitive/: amount.py  signatories.py
iroha/query/: query.py  request.py  response.py
iroha/tests/: test_multihash.py
iroha/tests/unit/: conftest.py  test_crypto_support.py
iroha/transaction/: command.py  transaction.py
iroha2/: __init__.py
iroha2/crypto/: __init__.py
iroha2/data_model/: __init__.py
iroha2/data_model/account/: __init__.py
iroha2/data_model/asset/: __init__.py
iroha2/data_model/domain/: __init__.py
iroha2/data_model/events/: __init__.py
iroha2/data_model/expression/: __init__.py
iroha2/data_model/isi/: __init__.py
iroha2/data_model/metadata/: __init__.py
iroha2/data_model/query/: __init__.py  asset.py
iroha2/data_model/transaction/: __init__.py
iroha2/sys/: __init__.py  rust.py
iroha2/sys/Compact/: __init__.py
iroha2/sys/Duration/: __init__.py
iroha2/sys/Map/: __init__.py
iroha2/sys/iroha_crypto/: __init__.py
iroha2/sys/iroha_data_model/: __init__.py
iroha2/sys/iroha_genesis/: __init__.py
iroha2/sys/iroha_version/: __init__.py
iroha2/sys/u128/: __init__.py
iroha_python/: Cargo.toml  config.json  test.py
iroha_python/generate/src/: as_py.rs  main.rs  module.rs
iroha_python/iroha2/: __init__.py
iroha_python/iroha2/crypto/: __init__.py
iroha_python/iroha2/data_model/: __init__.py
iroha_python/iroha2/sys/: rust.py
iroha_python/src/: lib.rs
protos/: api.proto  api_pb2.py  api_pb2_grpc.py
schema/: commands.proto  endpoint.proto  primitive.proto  queries.proto  response.proto  transaction.proto
scripts/: README.md  compile-proto.py  download-schema.py
src/: client.rs  creator.py  isi.rs  lib.rs  python.rs  types.rs
src/data_model/: account.rs  asset.rs  block.rs  crypto.rs  domain.rs  mod.rs  role.rs  tx.rs  util.rs
src/helper/: amount.py  crypto.py  ed25519.py  exception.py  genesis.py  stateless_validator.py
src/lib/ed25519/: Makefile
src/network/: connection.py
src/primitive/: signatories.py
src/query/: query.py  request.py  response.py
src/transaction/: command.py  transaction.py
tests/: __init__.py  conftest.py  helpers.py  test_account.py  test_asset.py  test_creator.py  test_domain.py  test_iterable.py  test_multihash.py
tests/helper/: test_amount.py  test_cipher.py  test_crypt.py  test_ed25519.py  test_genesis.py  test_logger.py  test_random.py  test_stateless_validator.py  test_zero.tx
tests/network/: test_connection.py
tests/primitive/: test_amount.py  test_signatories.py
tests/query/: test_query.py  test_query_account.py  test_query_asset.py  test_query_domain.py  test_request.py  test_response.py
tests/query/accounts/: conftest.py  test_query_accounts.py
tests/query/assets/: conftest.py  test_query_assets.py
tests/query/domains/: conftest.py  test_query_domains.py
tests/query/transactions/: conftest.py  test_query_transactions.py
tests/transaction/: test_account.py  test_asset.py  test_command.py  test_domain.py  test_transaction.py
(+137 files in other folders)
