[package]
name = "iroha-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iroha"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["multiple-pymethods", "rust_decimal"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

iroha_client = { git = "https://github.com/hyperledger/iroha.git", branch = "iroha2-stable" }
iroha_config = { git = "https://github.com/hyperledger/iroha.git", branch = "iroha2-stable" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha.git", branch = "iroha2-stable", features = ["transparent_api"] }
iroha_crypto = { git = "https://github.com/hyperledger/iroha.git", branch = "iroha2-stable" }
paste = "1.0.14"
derive_more = "0.99.17"
eyre = { version = "0.6.9", features = ["pyo3"] }
rust_decimal = "1.33.1"
hex = "0.4.3"
