[package]
name = "iroha-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iroha"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["multiple-pymethods", "rust_decimal"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

iroha = { git = "https://github.com/hyperledger/iroha.git", rev = "cacc805ffa005aac943ffc5777e0caa58ba7f7ac" }
iroha_config = { git = "https://github.com/hyperledger/iroha.git", rev = "cacc805ffa005aac943ffc5777e0caa58ba7f7ac" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha.git", rev = "cacc805ffa005aac943ffc5777e0caa58ba7f7ac", features = ["transparent_api"] }
iroha_crypto = { git = "https://github.com/hyperledger/iroha.git", rev = "cacc805ffa005aac943ffc5777e0caa58ba7f7ac" }
iroha_schema = { git = "https://github.com/hyperledger/iroha.git", rev = "cacc805ffa005aac943ffc5777e0caa58ba7f7ac" }
iroha_primitives = { git = "https://github.com/hyperledger/iroha.git", rev = "cacc805ffa005aac943ffc5777e0caa58ba7f7ac" }
parity-scale-codec = { version = "3.6.9", default-features = false, features = ["derive"] }
paste = "1.0.14"
derive_more = "0.99.17"
eyre = { version = "0.6.12", features = ["pyo3"] }
rust_decimal = "1.35.0"
hex = "0.4.3"
url = "2.4.1"
