[package]
name = "iroha-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iroha"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["multiple-pymethods", "rust_decimal"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

iroha = { git = "https://github.com/hyperledger/iroha.git", rev = "29f1a48d60f2143b7424b79aa1f6ac3cba85aabd" }
iroha_config = { git = "https://github.com/hyperledger/iroha.git", rev = "29f1a48d60f2143b7424b79aa1f6ac3cba85aabd" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha.git", rev = "29f1a48d60f2143b7424b79aa1f6ac3cba85aabd", features = ["transparent_api"] }
iroha_crypto = { git = "https://github.com/hyperledger/iroha.git", rev = "29f1a48d60f2143b7424b79aa1f6ac3cba85aabd" }
iroha_schema = { git = "https://github.com/hyperledger/iroha.git", rev = "29f1a48d60f2143b7424b79aa1f6ac3cba85aabd" }
iroha_primitives = { git = "https://github.com/hyperledger/iroha.git", rev = "29f1a48d60f2143b7424b79aa1f6ac3cba85aabd" }
parity-scale-codec = { version = "3.6.9", default-features = false, features = ["derive"] }
paste = "1.0.14"
derive_more = "0.99.17"
eyre = { version = "0.6.12", features = ["pyo3"] }
rust_decimal = "1.35.0"
hex = "0.4.3"
url = "2.4.1"
