[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "iroha"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["fixedint==0.2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "iroha-python"
version = "0.1.0"
description = ""
authors = ["Aleksandr Strokov <busyfifer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
pytest = "^8.1.1"
faker = "^24.4.0"
allure-pytest = "^2.13.5"
maturin = "^1.7.0"